feat: added swapfile automation